[New] Flujo de Accidentes. Gestión de Juicios. Arreglos.

--- a/src/Buseta/TransitoBundle/Resources/views/Accidente/conciliacion_modal.html.twig
+++ b/src/Buseta/TransitoBundle/Resources/views/Accidente/conciliacion_modal.html.twig
@@ -24,6 +24,7 @@
                         <div class="col-md-12" style="padding-bottom: 10px;">
                             <label class="control-label">Responsable</label>
                             <select id="buseta_transitobundle_accidente_responsable_conc" class="form-control">
+                                <option value="" selected>--- Seleccione ---
                                 <option value="NOHUBO">No hubo
                                 <option value="CHOFER">Chofer
                                 <option value="EMPRESA">Empresa
@@ -35,6 +36,7 @@
                         <div class="col-md-12" style="padding-bottom: 10px;">
                             <label class="control-label">Quien solventa</label>
                             <select id="buseta_transitobundle_accidente_quienPaga_conc" class="form-control">
+                                <option value="" selected>--- Seleccione ---
                                 <option value="NADIE">Nadie
                                 <option value="CHOFER">Chofer
                                 <option value="EMPRESA">Empresa
