--- a/src/Buseta/TransitoBundle/Resources/views/Juicio/new.html.twig
+++ b/src/Buseta/TransitoBundle/Resources/views/Juicio/new.html.twig
@@ -1,9 +1,9 @@
-<div class="modal" id="form_penal_modal" tabindex="-1" role="dialog" aria-labelledby="createpenal" aria-hidden="true">
+<div class="modal" id="form_juicio_modal" tabindex="-1" role="dialog" aria-labelledby="createjuicio" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="createpenal">{{ 'penal_accidente.modal.title'|trans({},'BusetaTransitoBundle') }}</h4>
+                <h4 class="modal-title" id="createjuicio">{{ 'juicio.modal.title'|trans({},'BusetaTransitoBundle') }}</h4>
             </div>
 
             <div class="modal-body">
@@ -16,31 +16,37 @@
                     {{ form_row(form._token) }}
                     <div class="row">
                         <div class="col-md-12">
-                            {{ form_row(form.nota) }}
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ form_row(form.adjunto) }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ form_row(form.alerta) }}
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ form_row(form.fecha) }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ form_row(form.fechaExpira) }}
+                            {{ form_row(form.descripcion) }}
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-12">
-                            {{ form_row(form.costo) }}
+                            {{ form_row(form.resultado) }}
+                        </div>
+                    </div>
+
+                    <div class="row" id="div_resultados">
+                        <div class="col-md-6">
+                            {{ form_row(form.responsable) }}
+                        </div>
+                        <div class="col-md-6">
+                            {{ form_row(form.quienPaga) }}
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            {{ form_row(form.fechaInicio) }}
+                        </div>
+                        <div class="col-md-6">
+                            {{ form_row(form.fechaFin) }}
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            {{ form_row(form.importeAbogado) }}
                         </div>
                     </div>
 
@@ -49,9 +55,9 @@
             </div>
 
             <div class="modal-footer">
-                <a href="#" class="btn btn-default" id="btn_penal_cancel" data-dismiss="modal"><span class="glyphicon glyphicon-chevron-left"></span>
+                <a href="#" class="btn btn-default" id="btn_juicio_cancel" data-dismiss="modal"><span class="glyphicon glyphicon-chevron-left"></span>
                     {{ 'actions.cancel' | trans({}, 'BusetaTransitoBundle') }}</a>
-                <a href="#" class="btn btn-primary" id="btn_penal_save"><span class="glyphicon glyphicon-save"></span>
+                <a href="#" class="btn btn-primary" id="btn_juicio_save"><span class="glyphicon glyphicon-save"></span>
                     {{ 'actions.save' | trans({}, 'BusetaTransitoBundle') }}</a>
             </div>
         </div>
