[Hotfix] Implementando las salidas de inventario mediante el mecanismo FIFO

--- a/src/Buseta/BodegaBundle/Resources/views/InventarioFisico/Linea/modal_form.html.twig
+++ b/src/Buseta/BodegaBundle/Resources/views/InventarioFisico/Linea/modal_form.html.twig
@@ -20,6 +20,7 @@
                     {{ form_row(form.descripcion) }}
                     {{ form_row(form.cantidadTeorica) }}
                     {{ form_row(form.cantidadReal) }}
+                    {{ form_row(form.precio_unitario) }}
                     {{ form_row(form.seriales) }}
                     {{ form_widget(form._token) }}
                 </form>
