--- a/src/Buseta/BodegaBundle/Resources/views/Albaran/Linea/modal_form.html.twig
+++ b/src/Buseta/BodegaBundle/Resources/views/Albaran/Linea/modal_form.html.twig
@@ -13,7 +13,29 @@
                     {% endif %}
 
                     <div class="row">
-                        <div class="col-lg-6">{{ form_row(form.producto) }}</div>
+                        <div class="col-lg-11">{{ form_row(form.producto) }}</div>
+                        <div class="col-lg-1">
+                            <div class="form-group">
+                                <label class="control-label required">&nbsp;</label>
+
+                                <a id="actualizar_productos" class="btn btn-info btn-xl"
+                                   href="#" title="Refrescar Datos de Producto">
+                                    <span class="glyphicon glyphicon-refresh"></span></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <table id="producto_proveedores_results_list"
+                                   class="table table-condensed table-striped table-bordered table-hover"
+                                   style="display: none;">
+                                <tr>
+                                    <th>Proveedor</th>
+                                    <th>Código</th>
+                                    <th style="width: 20%;">Costo</th>
+                                    <th></th>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="col-lg-6">{{ form_row(form.precio_unitario) }}</div>
                         <div class="col-lg-6">{{ form_row(form.uom) }}</div>
                         <div class="col-lg-6">{{ form_row(form.cantidadMovida) }}</div>
                         <div id="serial" class="col-lg-6">{{ form_row(form.seriales) }}</div>
